static/css/custom.css
/*Document classes*/
html, body{
    height: 100%;
    min-height: 100%!important;
    font-family: 'Karla', sans-serif;
    color: #2a3439;
    
}

a:hover{
    text-decoration: none;
}


.no-spacing{
    padding: 0;
    margin: 0;
}


.no-content{
    min-height: 800px;
}

.no-flex{
    flex-wrap: nowrap;
}

#container{
    min-height: 100%;
}

#main {
    overflow: auto;
    padding-bottom: 310px;
}

/*End of Document classes*/

/*Utility Classes*/

.max-width{
    width: 100%;
}

.center{
    text-align: center;
}

.center-small{
    text-align: center;
}

.margin-center{
    margin-right: auto !important;
    margin-left: auto !important;
}

.justify-center{
    justify-content: center;
}

.negative-top{
    top: -8px;
}

.nobreak {
  white-space: nowrap;
}

.underline-link{
    text-decoration: underline;
    color: #2a3439;
}

.underline-link:hover{
    text-decoration: underline;
    color: #423b95
}

.table-overflow{
    overflow-x: auto;
}

.hidden-when-small{
        display: none;
}

.card-info{
    max-width: 20rem;
}

.no-margin{
    margin-left: 0px;
    margin-right: 0px;
}

.no-padding{
    padding-left: 0px;
    padding-right: 0px;
}

.relative{
    position: relative;
}

.left{
    float: left;
}

.large-text{
    font-size: 18px;
}

/*End of Utility Classes*/


/*Django Messages*/

.django-message{
    width: auto;
    position: absolute;
    z-index: 2;
    background-color: white;
}

/*End of Django Messages*/

/*Datatables Styling*/

.table td{
    vertical-align: middle;
}

.thead-dark{
    color: #fff;
    background-color: #2a3439;
}

#all_cards_length{
    padding-top: 15px;
    padding-bottom: 15px;
}

#all_cards_info{
    padding-top: 25px;
    padding-bottom: 10px;
}

#all_cards_paginate{
    padding-top: 25px;
    padding-bottom: 10px;
}

table.dataTable thead th.sorting,
table.dataTable thead th.sorting_asc,
table.dataTable thead th.sorting_desc {
    background: none;
    padding: 15px 5px;
}

#all_cards{
    text-align: center;
}


/**/

/*Misc Document Classes*/

.navbar-background{
    background-color: #2a3439;
    padding: 0;
    color: #fff;
}

.banner-parent{
    position: relative;
}

.banner-child{
    position: absolute;
    right: 4%;
    bottom: 7%;
    color: #F5F5F5;
    padding: 10px 10px 5px 10px;
    display: none;
}
#cover-image{
    max-height: 950px;
    object-fit: cover;
}

.card-minimalistic{
    margin: auto;
    text-align: center;
    padding-top: 25px;
    color: #2a3439;
}

.button-effect{
    color: #fff;
    text-decoration: none;
    background-color:#2a3439;
    padding: 7px;
    border-radius: 5px;
}

.button-effect:hover{
    color: #fff;
    background-color: #2a3439e3;
    transition: 0.5s;
    border-color: #767676;
    text-decoration: none;
}
.cardlist-row{
    border-bottom-style: solid;
    border-bottom-width: thin;
}


.add-to-cart-quantity{
    max-width: 50px;
    border-radius: 5px;
    text-align: center;
    border-color: #767676
}

.cart-form{
    padding-top: 20px;
}

.card-minimalistic{
    margin: auto;
    text-align: center;
    padding-top: 25px;
    color: #2a3439;
}

.card-image{
    height: 30rem;
}



.card-image-hidden{
    max-height: 270px;
    position: absolute;
    display: none;
    z-index: 2;
    top: 50px;
    left: 0;
}
.camera-icon{
    display: none;
}

#show-image{
    height: auto;
    width: auto;
}

.resource_image{
    max-width: 100%;
    height: auto;
}

.no-listings{
    position: absolute;
    height: 200px;
    top: 35%;
}


/*End of Misc Document Classes*/

/* Search Bar Styling */

.search{
    max-width: 190px;
}

.advanced-search{
    padding: 25px 10px 25px 10px;
}

/* End of Search Bar */


/* Pagination */

.page-item.active .page-link {
    z-index: 1;
    color: #fff;
    background-color: #2a3439;
    border-color: #a4a4a4;
}

.page-link{
    color: #2a3439;
}

.page-link:hover{
    color: #2a3439;
}

/* End of Pagination */

/*Shopping Cart*/

.card {
    margin-bottom: 25px;
    width: 90%;
}
 
.address-card{
    width: 100%!important;
    min-height: 214px;
}

/**/


/*Card Display Carousel Styling*/

.cards-background{
    background-color: #F5F5F5;
    min-height: 825px;
}

.custom-controls{
    background-color: #2a3439;
    height: 50px;
    width: 50px;
    align-items: center;
    justify-content: center;
    text-align: center;
    opacity: 1;
    border-radius: 5px;
    transition: 0.3s;
}

.custom-controls:hover{
    background-color: #2a3439e3;
}

.carousel-next {
    margin-left: 15px;
}
.carousel-prev {
  right: 7rem;
}

.carousel-caption-custom{
    text-align: center;
}

.carousel-inner .carousel-item {
  transition: -webkit-transform 0.5s ease;
  transition: transform 0.5s ease;
  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
}

.carousel-control-next-icon{
    height: 50px;
}

.carousel-control-prev-icon{
    height: 50px;
}

.carousel-image {
    width: 80%;
    height: auto;
}

.carousel-image-profile{
    width: 20rem;
}


/*End of Card Display Carousel Styling*/

/*Form Styling*/

textarea.form-control {
    height: 5rem;
}

/*End of Form Styling*/

/* Footer Styling */
.site-footer
{
    background-color:#2a3439;
    padding:45px 0 20px;
    font-size:15px;
    line-height:24px;
    color:#737373;
    
}
#footer{
    position: relative;
    height: 650px;
    margin-top: -330px;
    clear: both;
}
.site-footer hr
{
    border-top-color:#bbb;
    opacity:0.5
}
.site-footer hr.small
{
    margin:20px 0
}
.site-footer h6
{
    color:#fff;
    font-size:16px;
    text-transform:uppercase;
    margin-top:5px;
    letter-spacing:2px
}
.site-footer a
{
    color:#737373;
}
.site-footer a:hover
{
    color:#3366cc;
    text-decoration:none;
}
.footer-links
{
    padding-left:0;
    list-style:none
}
.footer-links li
{
    display:block
}
.footer-links a
{
    color:#737373
}
.footer-links a:active,.footer-links a:focus,.footer-links a:hover
{
    color:#737373;
    text-decoration:underline;
}
.footer-links.inline li
{
    display:inline-block
}
.site-footer .social-icons
{
    text-align:right
}
.site-footer .social-icons a
{
    width:40px;
    height:40px;
    line-height:40px;
    margin-left:6px;
    margin-right:0;
    border-radius:100%;
    background-color:#33353d
}
.copyright-text
{
    margin:0
}

.social-icons
{
    padding-left:0;
    margin-bottom:0;
    list-style:none
}
.social-icons li
{
    display:inline-block;
    margin-bottom:4px
}
.social-icons li.title
{
    margin-right:15px;
    text-transform:uppercase;
    color:#96a2b2;
    font-weight:700;
    font-size:13px
}
.social-icons a{
    background-color:#eceeef;
    color:#818a91;
    font-size:16px;
    display:inline-block;
    line-height:44px;
    width:44px;
    height:44px;
    text-align:center;
    margin-right:8px;
    border-radius:100%;
    -webkit-transition:all .2s linear;
    -o-transition:all .2s linear;
    transition:all .2s linear
}
.social-icons a:active,.social-icons a:focus,.social-icons a:hover
{
    color:#fff;
    background-color:#29aafe
}
.social-icons.size-sm a
{
    line-height:34px;
    height:34px;
    width:34px;
    font-size:14px
}

.social-icons a.linkedin:hover
{
    background-color:#007bb6
}
.social-icons a.github:hover
{
    background-color:#24292e
}


@media (max-width:767px)
{
  .site-footer
  {
      padding-bottom:0
  }
  .site-footer .copyright-text,.site-footer .social-icons
  {
      text-align:center
  }
  .social-icons li.title
  {
      display:block;
      margin-right:0;
      font-weight:600
  }
}

@media (max-width:991px)
{
  .site-footer [class^=col-]
  {
    margin-bottom:30px
  }
}


/* End of footer styling */


/* OTHER MEDIA QUERIES */ 



/* Extra Small Devices, Phones */ 
@media only screen and (min-width : 480px) {
    .card{
        margin-bottom: 25px;
        width: 80%;
    }
    .django-message{
        left: 50%;
        margin-left: -138px;
    }
}

/* Small Devices, Tablets */
@media only screen and (min-width : 768px) {
    .hidden-when-small{
        display: flex;
    }

    .camera-icon{
    width: 45px;
    height: auto;
    position: relative;
    bottom: 5px;
    display: block;
    padding-top: 15px;
    }

    .center-small{
        text-align: inherit;
    }
    .cart-form{
        padding-top: 0px;
    }

    .card{
        margin-bottom: 25px;
        width: 60%;
    }
    #table-title{
        padding-left: 3rem;
    }

    #card-title{
        padding: 0 2px;
    }
    #footer{
        height: 350px;
    }
}

/* Medium Devices, Desktops */
@media only screen and (min-width : 992px) {
   .banner-child{
       display: block;
   }

    .camera-icon{
        padding-top: 10px;
    }
    
}

/* Large Devices, Wide Screens */
@media only screen and (min-width : 1200px) {

}

